storage/perfschema/pfs_engine_table.cc
@@ -144,6 +144,9 @@ void PFS_engine_table_share::check_one_table(THD *thd)
       m_checked= true;
     close_thread_tables(thd);
   }
+  else
+    sql_print_error(ER(ER_WRONG_NATIVE_TABLE_STRUCTURE),
+                    PERFORMANCE_SCHEMA_str.str, m_name.str);
 
   lex_end(&dummy_lex);
   thd->lex= old_lex;
